<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:paddingRight="48dp"
            android:paddingLeft="48dp"
            android:paddingBottom="20dp"
            android:gravity="center"
            android:textColor="@color/colorMediumText"
            android:text="@string/sign_in_info"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/create_account"
            android:textColor="@android:color/white"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="24dp"
            android:background="#C8C9CB"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <!-- Email -->
        <com.wallakoala.wallakoala.Views.TextInputLayout
            android:id="@+id/email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorMediumText"
                android:hint="@string/email_hint"
                android:nextFocusUp="@id/email_edittext"
                android:nextFocusLeft="@id/email_edittext"/>

        </com.wallakoala.wallakoala.Views.TextInputLayout>

        <!-- Contraseña -->
        <com.wallakoala.wallakoala.Views.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="12dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorMediumText"
                android:hint="@string/password_hint"/>

        </com.wallakoala.wallakoala.Views.TextInputLayout>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/remember_me_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textColor="@color/colorMediumText"
            android:layout_margin="24dp"
            app:buttonTint="@color/colorAccent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/colorMediumText"
            android:layout_marginRight="24dp"
            android:gravity="right"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/login_sign_in"
            android:textColor="@android:color/white"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>

    </LinearLayout>

</ScrollView>