<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="2dp"
    android:layout_marginLeft="2dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardPreventCornerOverlap="false"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Header -->
        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <ImageButton
                android:id="@+id/filter_item_section_clear"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:alpha="0.2"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_clear_black"/>

            <com.wallakoala.wallakoala.Views.ExistenceTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginRight="42dp"
                android:layout_marginEnd="42dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="4dp"
                android:paddingLeft="8dp"
                android:text="@string/filter_item_sections"
                android:textSize="12dp"
                android:textColor="@color/colorMediumText"
                android:background="@drawable/filter_bottom_border"
                app:customFont="Existence-StencilLight.otf"/>

        </RelativeLayout>

        <!-- Body -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <!-- Left Column -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <com.wallakoala.wallakoala.Views.ExistenceCheckBox
                    android:id="@+id/filter_section_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_section_abrigos"
                    android:textColor="@color/colorText"
                    android:layout_marginBottom="8dp"
                    app:buttonTint="@color/colorAccent"
                    app:customFontCh="Existence-StencilLight.otf"/>

                <com.wallakoala.wallakoala.Views.ExistenceCheckBox
                    android:id="@+id/filter_section_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_section_americanas"
                    android:textColor="@color/colorText"
                    android:layout_marginBottom="8dp"
                    app:buttonTint="@color/colorAccent"
                    app:customFontCh="Existence-StencilLight.otf"/>

                <com.wallakoala.wallakoala.Views.ExistenceCheckBox
                    android:id="@+id/filter_section_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_section_camisas"
                    android:textColor="@color/colorText"
                    android:layout_marginBottom="8dp"
                    app:buttonTint="@color/colorAccent"
                    app:customFontCh="Existence-StencilLight.otf"/>

                <com.wallakoala.wallakoala.Views.ExistenceCheckBox
                    android:id="@+id/filter_section_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_section_camisetas"
                    android:textColor="@color/colorText"
                    android:layout_marginBottom="8dp"
                    app:buttonTint="@color/colorAccent"
                    app:customFontCh="Existence-StencilLight.otf"/>

                <com.wallakoala.wallakoala.Views.ExistenceCheckBox
                    android:id="@+id/filter_section_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_section_camisetas"
                    android:textColor="@color/colorText"
                    android:layout_marginBottom="8dp"
                    app:buttonTint="@color/colorAccent"
                    app:customFontCh="Existence-StencilLight.otf"/>

                <com.wallakoala.wallakoala.Views.ExistenceCheckBox
                    android:id="@+id/filter_section_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_section_jerseis"
                    android:textColor="@color/colorText"
                    android:layout_marginBottom="8dp"
                    app:buttonTint="@color/colorAccent"
                    app:customFontCh="Existence-StencilLight.otf"/>

            </LinearLayout>

            <!-- Right Column -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <com.wallakoala.wallakoala.Views.ExistenceCheckBox
                    android:id="@+id/filter_section_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_section_pantalones"
                    android:textColor="@color/colorText"
                    android:layout_marginBottom="8dp"
                    app:buttonTint="@color/colorAccent"
                    app:customFontCh="Existence-StencilLight.otf"/>

                <com.wallakoala.wallakoala.Views.ExistenceCheckBox
                    android:id="@+id/filter_section_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_section_sudaderas"
                    android:textColor="@color/colorText"
                    android:layout_marginBottom="8dp"
                    app:buttonTint="@color/colorAccent"
                    app:customFontCh="Existence-StencilLight.otf"/>

                <com.wallakoala.wallakoala.Views.ExistenceCheckBox
                    android:id="@+id/filter_section_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_section_trajes"
                    android:textColor="@color/colorText"
                    android:layout_marginBottom="8dp"
                    app:buttonTint="@color/colorAccent"
                    app:customFontCh="Existence-StencilLight.otf"/>

                <com.wallakoala.wallakoala.Views.ExistenceCheckBox
                    android:id="@+id/filter_section_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_section_zapatos"
                    android:textColor="@color/colorText"
                    android:layout_marginBottom="8dp"
                    app:buttonTint="@color/colorAccent"
                    app:customFontCh="Existence-StencilLight.otf"/>

                <com.wallakoala.wallakoala.Views.ExistenceCheckBox
                    android:id="@+id/filter_section_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_section_sport"
                    android:textColor="@color/colorText"
                    android:layout_marginBottom="8dp"
                    app:buttonTint="@color/colorAccent"
                    app:customFontCh="Existence-StencilLight.otf"/>

                <com.wallakoala.wallakoala.Views.ExistenceCheckBox
                    android:id="@+id/filter_section_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_section_polos"
                    android:textColor="@color/colorText"
                    android:layout_marginBottom="8dp"
                    app:buttonTint="@color/colorAccent"
                    app:customFontCh="Existence-StencilLight.otf"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>