<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!-- Texto de cabecera -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:paddingBottom="6dp"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:text="@string/add_shops"
        android:textSize="18dp"
        android:textColor="@color/colorLightText"
        android:background="@drawable/filter_bottom_border"/>

    <FrameLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <!-- Lista de tiendas -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/add_shops_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <!-- Loading View -->
        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/add_shops_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:layout_gravity="center"
            android:alpha="0.75"
            style="@style/SpinKitView.Large.ChasingDots"
            app:SpinKit_Color="@color/colorAccent"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|right"
        android:layout_margin="24dp">

        <Button
            android:id="@+id/add_shops_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/colorMediumText"
            android:textSize="15dp"
            android:padding="16dp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>

        <Button
            android:id="@+id/add_shops_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:textSize="15dp"
            android:padding="16dp"
            style="@style/AppTheme.Button"/>

    </LinearLayout>

</LinearLayout>